# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
assets/models/cube/: cube.mtl
assets/models/grass/: grass.mtl
assets/models/plane/: plane.mtl
common/: CMakeLists.txt  camera.cpp  shader.cpp
hello_window/: CMakeLists.txt  main.cpp
include/: config.hpp.in
include/common/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
lighting/: CMakeLists.txt  main.cpp  shader.frag
src/: CMakeLists.txt  README.md
src/advanced_opengl/: CMakeLists.txt  README.md  main.cpp  quad.frag  quad.vert  shader.frag
src/common/: CMakeLists.txt  camera.cpp  mesh.cpp  model.cpp  texture.cpp
src/hello_window/: README.md
src/lighting/: CMakeLists.txt  README.md  light.frag  main.cpp  shader.frag  shader.vert
src/model/: CMakeLists.txt  README.md  grid.vert  main.cpp
src/skybox/: CMakeLists.txt  main.cpp  outline.frag  shader.frag  shader.vert  skybox.frag  skybox.vert
src/text/: CMakeLists.txt  main.cpp
src/textures/: README.md  shader.frag
src/triangle/: animated.frag  interpolated.frag
textures/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
triangle/: CMakeLists.txt  main.cpp  shader.vert
